<resources>
    <string name="app_name">Calculator</string>
    <string name="Ac">AC</string>
    <string name="plusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="x">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">,</string>
    <string name="editText1">Policy</string>
    <string name="editText2">Product Category</string>
    <string name="editText3">Origin Country</string>
    <string name="editText4">Brand</string>
    <string name="button">Export as CSV</string>
    <string name="policies">Policies</string>
    <string name="current">Current Policies</string>
    <string name="button2">Next</string>



</resources>