<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

<FrameLayout
    android:paddingHorizontal="35dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/container"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:ellipsize="end"
        android:maxLines="1"
        android:minWidth="48dp"
        android:onClick="numberClick"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="80dp" />

</FrameLayout>
    
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="6dp"
        android:paddingVertical="6dp">

        <com.google.android.material.button.MaterialButton
            style="@style/grey.Button"
            android:id="@+id/btn_clear"
            android:onClick="numberClick"
            android:text="@string/Ac" />

        <com.google.android.material.button.MaterialButton
            style="@style/grey.Button"
            android:layout_marginHorizontal="18dp"
            android:id="@+id/btn_plusMinus"
            android:onClick="numberClick"
            android:text="@string/plusMinus" />

        <com.google.android.material.button.MaterialButton
            style="@style/grey.Button"
            android:layout_marginEnd="18dp"
            android:id="@+id/btn_percent"
            android:onClick="numberClick"
            android:text="@string/percent" />

        <com.google.android.material.button.MaterialButton
            style="@style/orange.Button"
            android:id="@+id/btn_division"
            android:onClick="click"
            android:text="@string/division" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:id="@+id/btn_seven"
                android:onClick="numberClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:layout_marginHorizontal="18dp"
                android:id="@+id/btn_eight"
                android:onClick="numberClick"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:layout_marginEnd="18dp"
                android:id="@+id/btn_nine"
                android:onClick="numberClick"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                style="@style/orange.Button"
                android:onClick="click"
                android:id="@+id/btn_x"
                android:text="@string/x" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:id="@+id/btn_four"
                android:onClick="numberClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:id="@+id/btn_five"
                android:onClick="numberClick"
                android:layout_marginHorizontal="18dp"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:id="@+id/btn_six"
                android:onClick="numberClick"
                android:layout_marginEnd="18dp"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                style="@style/orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="click"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:id="@+id/btn_one"
                android:onClick="numberClick"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:id="@+id/btn_two"
                android:onClick="numberClick"
                android:layout_marginHorizontal="18dp"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:id="@+id/btn_three"
                android:onClick="numberClick"
                android:layout_marginEnd="18dp"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                style="@style/orange.Button"
                android:id="@+id/btn_plus"
                android:onClick="click"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:onClick="numberClick"
                android:layout_width="178dp"
                android:id="@+id/btn_zero"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                style="@style/grey_dark.Button"
                android:onClick="numberClick"
                android:layout_marginHorizontal="18dp"
                android:id="@+id/btn_dot"
                android:text="@string/dot" />


            <com.google.android.material.button.MaterialButton
                style="@style/orange.Button"
                android:onClick="click"
                android:id="@+id/btn_equal"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>